# weather_etl

./: .env  .gitignore  .gitignoretab  README.md  pyproject.toml  requirements.txt  workspace.yaml
dagster_project/: workspace.yaml
doc/: TABLES.md
notebooks/: comparison.ipynb  comparison.md
weather_etl/: README.md  assets.py  definitions.py  forecast_comparison.csv  jobs.py  resources.py  schedules.py  setup.cfg  setup.py  text_zadami.txt  weather_etl_assets.py
weather_etl/notebooks/: comparison.ipynb
weather_etl/sql/: create_schema_and_tables.sql
weather_etl_tests/: test_assets.py
